@@ -7,12 +7,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter{
@@ -27,7 +29,7 @@ public class JwtFilter extends OncePerRequestFilter{
             FilterChain filterChain
             )throws ServletException, IOException{
 
-        if(request.getRequestURI().equals("/login")){
+        if(request.getRequestURI().equals("/login") || request.getRequestURI().equals("/register")){
             filterChain.doFilter(request,response);
             return;
         }
@@ -48,12 +50,14 @@ public class JwtFilter extends OncePerRequestFilter{
             return;
         }
 
-        String username = jwtService.getUsername(token);
+        String username = jwtService.extractUsername(token);
+        String role = jwtService.extractRole(token);
 
-        UsernamePasswordAuthenticationToken authentication=
-                new UsernamePasswordAuthenticationToken(
-                    username, null, Collections.emptyList()
-                );
+        List<SimpleGrantedAuthority> authorities =
+                List.of(new SimpleGrantedAuthority("ROLE_" + role));
+
+        UsernamePasswordAuthenticationToken authentication =
+                new UsernamePasswordAuthenticationToken(username, null, authorities);
 
         SecurityContextHolder.getContext().setAuthentication(authentication);
 
